# Bixes-2020

./: .gitignore  README.md
C/: README.md
C/Exemplos/: helloworld.c  helloworld.h  main.c
C/Tarefas/: README.md
C/Tarefas/1/: README.md  functions.c  header_file.h  main.c  strategies.c
C/Tarefas/2/: Makefile  README.md  delay.h  dojo.c  dojo.h  initialization.c  main.c  movement.c  robot.c  robot.h  strategies.c  strategies.h
Embarcados/: README.md
Embarcados/Tarefa/: README.md  config.mk  cube_configuration.md
Embarcados/Tarefa/cube/: tarefa_embarcados.ioc
Embarcados/Tarefa/inc/: led_control.h  utils.h
Embarcados/Tarefa/src/: led_control.c  main.c
Instalando o necessário/: README.md
Projeto Final/: README.md
Projeto Final/turtlebot3_example/launch/: turtlebot3_teleop_key.launch
Projeto Final/turtlebot3_example/scripts/: turtlebot3_drive.py  turtlebot3_teleop_key.py
Projeto Final/turtlebot3_gazebo/models/turtlebot3_dohyo/meshes/: dohyo.stl
git/: README.md  Tarefa_2.md  Tarefas.md
thor_the_turtle/: CMakeLists.txt  package.xml
turtlebot3_description/: CMakeLists.txt
turtlebot3_example/: CMakeLists.txt  package.xml
turtlebot3_example/launch/: turtlebot3_drive.launch  turtlebot3_drive_py.launch
turtlebot3_example/nodes/: turtlebot3_teleop_key.py
turtlebot3_example/scripts/: turtlebot3_drive_py.py  turtlebot3_obstacle.py  turtlebot3_pointop_key.py
turtlebot3_example/src/: turtlebot3_drive.cpp
turtlebot3_gazebo/: CMakeLists.txt  package.xml
turtlebot3_gazebo/launch/: turtlebot3_dohyo.launch
turtlebot3_gazebo/models/turtlebot3_dohyo/: model.config  model.sdf
turtlebot3_gazebo/models/turtlebot3_dohyo/meshes/: base.stl  borda.stl  shikiri.stl
turtlebot3_gazebo/worlds/: turtlebot3_dohyo.world
