<?xml version="1.0"?>
<package format="2">
  <name>thor_the_turtle</name>
  <version>1.0.0</version>
  <description>ROS packages for the Turtlebot3 simulation used in ThundeRatz Selective Process</description>
  <maintainer email="schneider@todo.todo">ThunderComp</maintainer>
  <license>MIT</license>
  <!-- <url type="repository">http://wiki.ros.org/thor_the_turtle</url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_examples</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
